<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <ImageView
        android:id="@+id/iv_product_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/sample1"
        android:background="@drawable/round_background"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/sample1_title"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/iv_product_img"
        app:layout_constraintTop_toTopOf="@+id/iv_product_img" />

    <TextView
        android:id="@+id/tv_product_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample1_address"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="#606060"
        app:layout_constraintStart_toStartOf="@+id/tv_product_title"
        app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sample1_price"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_product_address"
        app:layout_constraintTop_toBottomOf="@id/tv_product_address" />


    <ImageView
        android:id="@+id/iv_chat"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/chat"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chat_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_chat_count"
        app:layout_constraintTop_toTopOf="@+id/tv_chat_count" />

    <TextView
        android:id="@+id/tv_chat_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="25"
        app:layout_constraintBottom_toBottomOf="@+id/iv_like"
        app:layout_constraintEnd_toStartOf="@+id/iv_like"
        app:layout_constraintTop_toTopOf="@+id/iv_like" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/heart"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_like_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_like_count"
        app:layout_constraintTop_toTopOf="@+id/tv_like_count" />

    <TextView
        android:id="@+id/tv_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>